/**
 * 抽象观察者角色类
 *
 * @author zengrong.gzr
 * @date 2017/07/05
 */
public interface Observer {
    public void update();
}
